Added Color Panel #22

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,7 @@
 		<script src="panels/split.js"></script>
 		<script src="panels/attribute.js"></script>
 		<script src="panels/aggregator.js"></script>
+		<script src="panels/color.js"></script>
 		<script src="panels/advancedoptions.js"></script>
 		
 		<!-- Load visualizations -->
