--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/vis-calendar.css" media="all" />
 		<link rel="stylesheet" href="css/vis-pie.css" media="all" />
 		<link rel="stylesheet" href="css/shared.css" media="all" />
+		<link rel="stylesheet" href="css/panel-color.css" media="all" />
 	</head>
 	<body>
 		<input type="file" id="FileSelectInput" accept=".csv" style="display:none" onchange="LoadCustomDataSet(this.files)">
