Added Header "roll-up" function (#42)

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<input type="file" id="FileSelectInput" accept=".csv" style="display:none" onchange="LoadCustomDataSet(this.files)">
 		<div id="ToolTipDiv"></div>
-		<div id="HeaderDiv"><input type="text" id="DataSetSelect" style="display:none;"></input></div>
+		<div id="HeaderDiv" class="HeaderOpen"><input type="text" id="DataSetSelect" style="display:none;"></input></div>
 		
 					
 		<div id="TitleDiv"></div>
