Moved rollup from core to its own panel

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="css/vis-pie.css" media="all" />
 		<link rel="stylesheet" href="css/shared.css" media="all" />
 		<link rel="stylesheet" href="css/panel-color.css" media="all" />
+		<link rel="stylesheet" href="css/panel-rollup.css" media="all" />
 	</head>
 	<body>
 		<input type="file" id="FileSelectInput" accept=".csv" style="display:none" onchange="LoadCustomDataSet(this.files)">
@@ -51,6 +52,7 @@
 		<script src="panels/aggregator.js"></script>
 		<script src="panels/color.js"></script>
 		<script src="panels/advancedoptions.js"></script>
+		<script src="panels/rollup.js"></script>
 		
 		<!-- Load visualizations -->
 		<script src="visualizations/table.js"></script>
