--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
 		<div id="ToolTipDiv"></div>
 		<div id="HeaderDiv" class="HeaderOpen"><input type="text" id="DataSetSelect" style="display:none;"></input></div>
 		
-					
-		<div id="TitleDiv"></div>
-		<div id="DescriptionDiv"></div>
+		<div id="DataSetInfoDiv">
+			<div id="TitleDiv"></div>
+			<div id="DescriptionDiv"></div>
+			<div id="DataSetInfoCloseDiv"></div>
+		</div>
 		<div id="MainDiv"></div>
 		
 		<!-- Load all external libraries -->
